--- a/ph4070ti/2.2-Data-pad.md
+++ b/ph4070ti/2.2-Data-pad.md
@@ -209,3 +209,14 @@ Accelerator Kernel Timing data
 ```
 
 ### nsys
+**GPU Contexts** 99.184 s
+#### Kernel Summary
+
+Time	Total Time	Instances	Avg	         Med	        Min	      Max	     StdDev	      Name
+99.7%	 87.265 s	  150000	581.768 μs	594.916 μs	180.545 μs	1.017 ms	322.220 μs	conv_forward_83_gpu
+ 0.3%	255.604 ms	150000	  1.704 μs	  1.568 μs	  1.344 μs	2.784 μs	    341 ns  pad_input_60_gpu
+
+#### Memory Time
+Time	Total Time	Count	Avg	Med	Min	Max	StdDev	Operation
+75.4%	725.023 ms	150000	4.833 μs	3.296 μs	896 ns	10.784 μs	3.878 μs	[CUDA memcpy Device-to-Host]
+24.6%	237.043 ms	150030	1.580 μs	1.824 μs	256 ns	7.456 μs	862 ns	[CUDA memcpy Host-to-Device]
