--- a/ph4070ti/3.1-Parallel-relu-pool.md
+++ b/ph4070ti/3.1-Parallel-relu-pool.md
@@ -68,3 +68,148 @@ Net Accuracy time:0.000265 seconds
 Free memory time:0.034775 seconds
 Total time:103.818236 seconds
 ```
+
+# nv_acc
+
+```
+$ ./cnn-cifar10 
+Parallel (pad) Code
+CNN for 50000 images
+Load Data time:0.681789 seconds
+Create Network time:0.000360 seconds
+Load Network Parameters time:0.003426 seconds
+Create Ouputs time:0.000165 seconds
+
+Net Forward total time:108.630354 seconds
+    Time for conv1: 50.115261 seconds
+    Time for relu1: 0.807431 seconds
+    Time for pool1: 9.209282 seconds
+    Time for conv2: 31.248254 seconds
+    Time for relu2: 0.803836 seconds
+    Time for pool2: 2.901106 seconds
+    Time for conv3: 10.509831 seconds
+    Time for relu3: 0.830931 seconds
+    Time for pool3: 1.306501 seconds
+    Time for fc: 0.129761 seconds
+    Time for softmax: 0.005641 seconds
+
+  Conv: 91.873346 seconds
+  ReLU: 2.442198 seconds
+  Pool: 13.416889 seconds
+  FC:   0.129761 seconds
+  Softmax: 0.005641 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.000265 seconds
+Free memory time:0.035689 seconds
+Total time:109.352047 seconds
+END!
+
+Accelerator Kernel Timing data
+/home/gskondras/cifar/cnn-cifar10_0/3.1-Parallel-relu-pool/layers.c
+  make_conv_layer  NVIDIA  devicenum=0
+    time(us): 42
+    42: data region reached 9 times
+        42: data copyin transfers: 15
+             device time(us): total=42 max=6 min=2 avg=2
+/home/gskondras/cifar/cnn-cifar10_0/3.1-Parallel-relu-pool/layers.c
+  free_conv  NVIDIA  devicenum=0
+    time(us): 39
+    53: data region reached 9 times
+        53: data copyin transfers: 9
+             device time(us): total=39 max=10 min=3 avg=4
+/home/gskondras/cifar/cnn-cifar10_0/3.1-Parallel-relu-pool/layers.c
+  pad_input  NVIDIA  devicenum=0
+    time(us): 400,551
+    60: compute region reached 150000 times
+        60: kernel launched 150000 times
+            grid: [1024]  block: [128]
+             device time(us): total=400,551 max=5 min=2 avg=2
+            elapsed time(us): total=2,131,187 max=30 min=10 avg=14
+    60: data region reached 300000 times
+/home/gskondras/cifar/cnn-cifar10_0/3.1-Parallel-relu-pool/layers.c
+  conv_forward  NVIDIA  devicenum=0
+    time(us): 87,337,548
+    82: data region reached 300000 times
+    83: compute region reached 150000 times
+        83: kernel launched 150000 times
+            grid: [1024]  block: [128]
+             device time(us): total=87,337,548 max=1,017 min=181 avg=582
+            elapsed time(us): total=89,061,978 max=1,027 min=189 avg=593
+/home/gskondras/cifar/cnn-cifar10_0/3.1-Parallel-relu-pool/layers.c
+  make_relu_layer  NVIDIA  devicenum=0
+    time(us): 6
+    134: data region reached 3 times
+        134: data copyin transfers: 3
+             device time(us): total=6 max=2 min=2 avg=2
+/home/gskondras/cifar/cnn-cifar10_0/3.1-Parallel-relu-pool/layers.c
+  relu_forward  NVIDIA  devicenum=0
+    time(us): 300,013
+    139: compute region reached 150000 times
+        139: kernel launched 150000 times
+            grid: [1024]  block: [128]
+             device time(us): total=300,013 max=3 min=2 avg=2
+            elapsed time(us): total=2,082,704 max=468 min=9 avg=13
+    139: data region reached 300000 times
+/home/gskondras/cifar/cnn-cifar10_0/3.1-Parallel-relu-pool/layers.c
+  free_relu  NVIDIA  devicenum=0
+    time(us): 0
+    151: data region reached 3 times
+/home/gskondras/cifar/cnn-cifar10_0/3.1-Parallel-relu-pool/layers.c
+  make_pool_layer  NVIDIA  devicenum=0
+    time(us): 6
+    178: data region reached 3 times
+        178: data copyin transfers: 3
+             device time(us): total=6 max=2 min=2 avg=2
+/home/gskondras/cifar/cnn-cifar10_0/3.1-Parallel-relu-pool/layers.c
+  pool_forward  NVIDIA  devicenum=0
+    time(us): 11,327,463
+    183: compute region reached 150000 times
+        183: kernel launched 150000 times
+            grid: [1024]  block: [128]
+             device time(us): total=11,327,463 max=180 min=12 avg=75
+            elapsed time(us): total=13,063,147 max=196 min=21 avg=87
+    183: data region reached 300000 times
+/home/gskondras/cifar/cnn-cifar10_0/3.1-Parallel-relu-pool/layers.c
+  free_pool  NVIDIA  devicenum=0
+    time(us): 0
+    213: data region reached 3 times
+/home/gskondras/cifar/cnn-cifar10_0/3.1-Parallel-relu-pool/layers.c
+  make_fc_layer  NVIDIA  devicenum=0
+    time(us): 6
+    241: data region reached 2 times
+        241: data copyin transfers: 3
+             device time(us): total=6 max=2 min=2 avg=2
+/home/gskondras/cifar/cnn-cifar10_0/3.1-Parallel-relu-pool/layers.c
+  load_conv  NVIDIA  devicenum=0
+    time(us): 24
+    315: update directive reached 3 times
+        315: data copyin transfers: 6
+             device time(us): total=24 max=8 min=2 avg=4
+/home/gskondras/cifar/cnn-cifar10_0/3.1-Parallel-relu-pool/layers.c
+  load_fc  NVIDIA  devicenum=0
+    time(us): 6
+    363: update directive reached 1 time
+        363: data copyin transfers: 2
+             device time(us): total=6 max=4 min=2 avg=3
+/home/gskondras/cifar/cnn-cifar10_0/3.1-Parallel-relu-pool/main.c
+  main  NVIDIA  devicenum=0
+    time(us): 368,106
+    121: data region reached 1 time
+        42: kernel launched 1 time
+            grid: [391]  block: [128]
+             device time(us): total=2 max=2 min=2 avg=2
+            elapsed time(us): total=400 max=400 min=400 avg=400
+        121: data copyin transfers: 37
+             device time(us): total=95,427 max=2,608 min=1,627 avg=2,579
+    181: data region reached 4 times
+        42: kernel launched 1 time
+            grid: [391]  block: [128]
+             device time(us): total=2 max=2 min=2 avg=2
+            elapsed time(us): total=30 max=30 min=30 avg=30
+    221: update directive reached 50000 times
+        221: data copyout transfers: 50000
+             device time(us): total=272,675 max=22 min=3 avg=5
+    295: data region reached 4 times
+    323: data region reached 1 time
+```
