Parallel - Data if, cuda gpu summary addition

--- a/ph4070ti/1.2-Parallel.md
+++ b/ph4070ti/1.2-Parallel.md
@@ -148,3 +148,12 @@ Accelerator Kernel Timing data
             elapsed time(us): total=144,165,762 max=2,112 min=355 avg=961
     46: data region reached 300000 times
 ```
+
+### nsys
+
+#### CUDA GPU Summay
+Time	Total Time Instances	Avg	       Med	      Min	        Max	      StdDev	   Category	        Operation
+96.3%	143.866 s	 150000	959.109 μs	1.053 ms	352.194 μs	  2.161 ms	455.340 μs	CUDA_KERNEL	conv_forward_46_gpu
+ 2.1%	  3.081 s	 809354	  3.806 μs	3.199 μs	  1.439 μs	163.329 μs	  3.889 μs	MEMORY_OPER	[CUDA memcpy Unified Host-to-Device]
+ 1.6%	  2.421 s	1117044	  2.167 μs	  992 ns	    575 ns	 39.840 μs	  2.366 μs	MEMORY_OPER	[CUDA memcpy Unified Device-to-Host]
+
