--- a/ph4070ti/2.1-Data-if.md
+++ b/ph4070ti/2.1-Data-if.md
@@ -214,3 +214,23 @@ Accelerator Kernel Timing data
         274: data copyin transfers: 6
              device time(us): total=27 max=9 min=2 avg=4
 ```
+
+
+### nsys
+**GPU Contexts** 138.880s
+
+#### Kernels Summary
+Time	Total Time	Instances	Avg	Med	Min	Max	StdDev	Name
+100.0%	129.074 s	150000	860.492 μs	993.639 μs	297.826 μs	1.351 ms	414.925 μs	conv_forward_55_gpu
+
+#### Memory Time 
+Time	Total Time	Count	Avg	Med	Min	Max	StdDev	Operation
+74.1%	739.050 ms	150000	4.927 μs	3.392 μs	960 ns	10.944 μs	3.894 μs	[CUDA memcpy Device-to-Host]
+25.9%	258.277 ms	150021	1.721 μs	2.016 μs	256 ns	7.424 μs	968 ns	[CUDA memcpy Host-to-Device]
+
+#### CUDA GPU Summary
+
+Time	Total Time	Instances	Avg	Med	Min	Max	StdDev	Category	Operation
+99.2%	129.074 s	150000	860.492 μs	993.639 μs	297.826 μs	1.351 ms	414.925 μs	CUDA_KERNEL	conv_forward_55_gpu
+0.6%	739.050 ms	150000	4.927 μs	3.392 μs	960 ns	10.944 μs	3.894 μs	MEMORY_OPER	[CUDA memcpy Device-to-Host]
+0.2%	258.277 ms	150021	1.721 μs	2.016 μs	256 ns	7.424 μs	968 ns	MEMORY_OPER	[CUDA memcpy Host-to-Device]
