--- a/ph4070ti/1.2-Parallel.md
+++ b/ph4070ti/1.2-Parallel.md
@@ -151,7 +151,7 @@ Accelerator Kernel Timing data
 
 ### nsys
 
-#### CUDA GPU Summay
+#### CUDA GPU Summary
 Time	Total Time Instances	Avg	       Med	      Min	        Max	      StdDev	   Category	        Operation
 96.3%	143.866 s	 150000	959.109 μs	1.053 ms	352.194 μs	  2.161 ms	455.340 μs	CUDA_KERNEL	conv_forward_46_gpu
  2.1%	  3.081 s	 809354	  3.806 μs	3.199 μs	  1.439 μs	163.329 μs	  3.889 μs	MEMORY_OPER	[CUDA memcpy Unified Host-to-Device]
