--- a/ph4070ti/3.1-Loop-opt.md
+++ b/ph4070ti/3.1-Loop-opt.md
@@ -262,3 +262,80 @@ Net Accuracy time:0.000265 seconds
 Free memory time:0.029627 seconds
 Total time:8.843890 seconds
 ```
+
+## gang collapse(3), vector collapse(2)
+!! Best performance, no vector barier -> no use of worker
+
+```
+$ make
+nvc -acc -Minfo=all -c11 -Wall -Wextra -march=native -c layers.c -o layers.o
+make_conv_layer:
+     42, Generating enter data copyin(layer[:1])
+         Generating enter data create(layer->weights[:layer->weights_size])
+         Generating enter data copyin(layer->in_padded[:layer->padded_size])
+         Generating enter data create(layer->bias[:M])
+free_conv:
+     53, Generating exit data delete(l->bias[:l->out_depth],l->in_padded[:l->padded_size],l[:1],l->weights[:l->weights_size])
+pad_input:
+     60, Generating present(l[:],X[:])
+         Generating NVIDIA GPU code
+         62, #pragma acc loop gang /* blockIdx.x */
+         64, #pragma acc loop seq
+         66, #pragma acc loop vector(128) /* threadIdx.x */
+     64, Loop is parallelizable
+     66, Loop is parallelizable
+conv_forward:
+     82, Generating present(l[:])
+         Generating copyout(Y[:l->out_size]) [if not already present]
+         Generating copyin(X[:in_size]) [if not already present]
+     83, Generating NVIDIA GPU code
+         86, #pragma acc loop gang collapse(3) /* blockIdx.x */
+         87,   /* blockIdx.x collapsed */
+         89,   /* blockIdx.x collapsed */
+         94, #pragma acc loop vector(32) collapse(2) /* threadIdx.x */
+             Generating reduction(+:sum)
+         95,   /* threadIdx.x collapsed */
+         96, #pragma acc loop seq
+     94, Loop is parallelizable
+     95, Loop is parallelizable
+     96, Loop is parallelizable
+    101, FMA (fused multiply-add) instruction(s) generated
+pool_forward:
+    184, Zero trip check eliminated
+fc_forward:
+    239, FMA (fused multiply-add) instruction(s) generated
+load_conv:
+    301, Generating update device(l->weights[:l->weights_size],l->bias[:l->out_depth])
+nvc -acc -Minfo=all -c11 -Wall -Wextra -march=native -o cnn-cifar10 main.o layers.o malloc2D.o timer.o
+gskondras@ph4070ti:~/cifar/cnn-cifar10_0/2.2-Data-pad$ ./cnn-cifar10 
+Parallel (pad) Code
+CNN for 50000 images
+Load Data time:0.368958 seconds
+Create Network time:0.136932 seconds
+Load Network Parameters time:0.003337 seconds
+Create Ouputs time:0.000161 seconds
+
+Net Forward total time:7.591493 seconds
+    Time for conv1: 2.864526 seconds
+    Time for relu1: 0.221736 seconds
+    Time for pool1: 0.572139 seconds
+    Time for conv2: 2.077245 seconds
+    Time for relu2: 0.075605 seconds
+    Time for pool2: 0.187883 seconds
+    Time for conv3: 1.371806 seconds
+    Time for relu3: 0.028304 seconds
+    Time for pool3: 0.048267 seconds
+    Time for fc: 0.122935 seconds
+    Time for softmax: 0.005846 seconds
+
+  Conv: 6.313577 seconds
+  ReLU: 0.325644 seconds
+  Pool: 0.808288 seconds
+  FC:   0.122935 seconds
+  Softmax: 0.005846 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.000265 seconds
+Free memory time:0.030851 seconds
+Total time:8.131996 seconds
+```
