--- a/ph4070ti/3.1-LoopOpt2.md
+++ b/ph4070ti/3.1-LoopOpt2.md
@@ -918,3 +918,46 @@ Free memory time:0.035141 seconds
 Total time:8.023729 seconds
 END!
 ```
+# pad_input: gang worker vector
+
+
+```
+pad_input:
+     60, Generating present(l[:],X[:])
+         Generating NVIDIA GPU code
+         62, #pragma acc loop gang, worker(4), vector(32) collapse(3) blockIdx.x threadIdx.y threadIdx.x */
+         63,   /* blockIdx.x threadIdx.y threadIdx.x collapsed */
+         64,   /* blockIdx.x threadIdx.y threadIdx.x collapsed */
+         
+$ ./cnn-cifar10 
+Parallel (pad) Code
+CNN for 50000 images
+Load Data time:0.374348 seconds
+Create Network time:0.130579 seconds
+Load Network Parameters time:0.003362 seconds
+Create Ouputs time:0.000169 seconds
+
+Net Forward total time:7.500235 seconds
+    Time for conv1: 2.819164 seconds
+    Time for relu1: 0.213677 seconds
+    Time for pool1: 0.573273 seconds
+    Time for conv2: 2.043584 seconds
+    Time for relu2: 0.079303 seconds
+    Time for pool2: 0.188018 seconds
+    Time for conv3: 1.360475 seconds
+    Time for relu3: 0.030532 seconds
+    Time for pool3: 0.048372 seconds
+    Time for fc: 0.123098 seconds
+    Time for softmax: 0.005518 seconds
+
+  Conv: 6.223223 seconds
+  ReLU: 0.323512 seconds
+  Pool: 0.809664 seconds
+  FC:   0.123098 seconds
+  Softmax: 0.005518 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.000255 seconds
+Free memory time:0.035670 seconds
+Total time:8.044619 seconds
+```
