Full on device executions

--- a/ph4070ti/3.2-Opt-ReLU.md
+++ b/ph4070ti/3.2-Opt-ReLU.md
@@ -1,3 +1,66 @@
+$ make
+nvc -acc -Minfo=all -c11 -Wall -Wextra -march=native -c layers.c -o layers.o
+make_conv_layer:
+     42, Generating enter data copyin(layer[:1])
+         Generating enter data create(layer->weights[:layer->weights_size])
+         Generating enter data copyin(layer->in_padded[:layer->padded_size])
+         Generating enter data create(layer->bias[:M])
+free_conv:
+     53, Generating exit data delete(l->bias[:l->out_depth],l->in_padded[:l->padded_size],l[:1],l->weights[:l->weights_size])
+pad_input:
+     60, Generating present(l[:],X[:])
+         Generating implicit firstprivate(c)
+         Generating NVIDIA GPU code
+         62, #pragma acc loop gang, vector(128) collapse(3) /* blockIdx.x threadIdx.x */
+         63,   /* blockIdx.x threadIdx.x collapsed */
+         64,   /* blockIdx.x threadIdx.x collapsed */
+conv_forward:
+     79, Generating present(Y[:],l[:],X[:])
+         Generating implicit firstprivate(m)
+         Generating NVIDIA GPU code
+         82, #pragma acc loop gang collapse(3) /* blockIdx.x */
+         84,   /* blockIdx.x collapsed */
+         86,   /* blockIdx.x collapsed */
+         91, #pragma acc loop vector(32) collapse(2) /* threadIdx.x */
+             Generating reduction(+:sum)
+         92,   /* threadIdx.x collapsed */
+         93, #pragma acc loop seq
+     91, Loop is parallelizable
+     92, Loop is parallelizable
+     93, Loop is parallelizable
+     98, FMA (fused multiply-add) instruction(s) generated
+make_relu_layer:
+    129, Generating enter data copyin(layer[:1])
+relu_forward:
+    134, Generating present(Y[:],l[:],X[:])
+         Generating implicit firstprivate(i)
+         Generating NVIDIA GPU code
+        136, #pragma acc loop gang, vector(128) /* blockIdx.x threadIdx.x */
+free_relu:
+    146, Generating exit data delete(l[:1])
+make_pool_layer:
+    173, Generating enter data copyin(layer[:1])
+pool_forward:
+    178, Generating present(l[:],Y[:],X[:])
+         Generating implicit firstprivate(m)
+         Generating NVIDIA GPU code
+        181, #pragma acc loop gang collapse(3) /* blockIdx.x */
+        182,   /* blockIdx.x collapsed */
+        183,   /* blockIdx.x collapsed */
+        188, #pragma acc loop vector(32) /* threadIdx.x */
+             Generating reduction(max:max)
+        189, #pragma acc loop seq
+    188, Loop is parallelizable
+    189, Loop is parallelizable
+free_pool:
+    208, Generating exit data delete(l[:1])
+fc_forward:
+    245, FMA (fused multiply-add) instruction(s) generated
+load_conv:
+    307, Generating update device(l->weights[:l->weights_size],l->bias[:l->out_depth])
+nvc -acc -Minfo=all -c11 -Wall -Wextra -march=native -o cnn-cifar10 main.o layers.o malloc2D.o timer.o
+
+
 Parallel (pad) Code
 CNN for 50000 images
 Load Data time:0.562043 seconds
