--- a/ph4070ti/3.3-Opt-FC.md
+++ b/ph4070ti/3.3-Opt-FC.md
@@ -1,3 +1,97 @@
+$ make
+nvc -acc -Minfo=all -c11 -Wall -Wextra -march=native -c layers.c -o layers.o
+make_conv_layer:
+     42, Generating enter data copyin(layer[:1])
+         Generating enter data create(layer->weights[:layer->weights_size])
+         Generating enter data copyin(layer->in_padded[:layer->padded_size])
+         Generating enter data create(layer->bias[:M])
+free_conv:
+     53, Generating exit data delete(l->bias[:l->out_depth],l->in_padded[:l->padded_size],l[:1],l->weights[:l->weights_size])
+pad_input:
+     60, Generating present(l[:],X[:])
+         Generating implicit firstprivate(c)
+         Generating NVIDIA GPU code
+         62, #pragma acc loop gang, vector(128) collapse(3) /* blockIdx.x threadIdx.x */
+         63,   /* blockIdx.x threadIdx.x collapsed */
+         64,   /* blockIdx.x threadIdx.x collapsed */
+conv_forward:
+     79, Generating present(Y[:],l[:],X[:])
+         Generating implicit firstprivate(m)
+         Generating NVIDIA GPU code
+         82, #pragma acc loop gang collapse(3) /* blockIdx.x */
+         84,   /* blockIdx.x collapsed */
+         86,   /* blockIdx.x collapsed */
+         91, #pragma acc loop vector(32) collapse(2) /* threadIdx.x */
+             Generating reduction(+:sum)
+         92,   /* threadIdx.x collapsed */
+         93, #pragma acc loop seq
+     91, Loop is parallelizable
+     92, Loop is parallelizable
+     93, Loop is parallelizable
+     98, FMA (fused multiply-add) instruction(s) generated
+make_relu_layer:
+    129, Generating enter data copyin(layer[:1])
+relu_forward:
+    134, Generating present(Y[:],l[:],X[:])
+         Generating implicit firstprivate(i)
+         Generating NVIDIA GPU code
+        136, #pragma acc loop gang, vector(128) /* blockIdx.x threadIdx.x */
+free_relu:
+    146, Generating exit data delete(l[:1])
+make_pool_layer:
+    173, Generating enter data copyin(layer[:1])
+pool_forward:
+    178, Generating present(l[:],Y[:],X[:])
+         Generating implicit firstprivate(m)
+         Generating NVIDIA GPU code
+        181, #pragma acc loop gang collapse(3) /* blockIdx.x */
+        182,   /* blockIdx.x collapsed */
+        183,   /* blockIdx.x collapsed */
+        188, #pragma acc loop vector(32) /* threadIdx.x */
+             Generating reduction(max:max)
+        189, #pragma acc loop seq
+    188, Loop is parallelizable
+    189, Loop is parallelizable
+free_pool:
+    208, Generating exit data delete(l[:1])
+make_fc_layer:
+    236, Generating enter data copyin(layer[:1])
+         Generating enter data create(layer->weights[:layer->out_depth*layer->in_neurons],layer->bias[:layer->out_depth])
+fc_forward:
+    241, Generating present(l[:],Y[:],X[:])
+         Generating implicit firstprivate(i)
+         Generating NVIDIA GPU code
+        244, #pragma acc loop gang /* blockIdx.x */
+        248, #pragma acc loop vector(128) /* threadIdx.x */
+             Generating reduction(+:sum)
+    248, Loop is parallelizable
+    250, FMA (fused multiply-add) instruction(s) generated
+free_fc:
+    263, Generating exit data delete(l->bias[:l->out_depth],l[:1],l->weights[:l->out_depth*l->in_neurons])
+load_conv:
+    312, Generating update device(l->weights[:l->weights_size],l->bias[:l->out_depth])
+load_fc:
+    360, Generating update device(l->weights[:l->out_depth*l->in_neurons],l->bias[:l->out_depth])
+make_softmax_layer:
+    386, Generating enter data copyin(layer[:1])
+         Generating enter data create(layer->likelihoods[:layer->out_depth])
+softmax_forward:
+    396, Generating copyin(max,total) [if not already present]
+         Generating present(l[:],Y[:],X[:])
+    401, Loop is parallelizable
+         Generating NVIDIA GPU code
+        401, #pragma acc loop vector(32) /* threadIdx.x */
+             Generating reduction(max:max)
+    409, Loop is parallelizable
+         Generating NVIDIA GPU code
+        409, #pragma acc loop vector(32) /* threadIdx.x */
+             Generating reduction(+:total)
+    417, Loop is parallelizable
+         Generating NVIDIA GPU code
+        417, #pragma acc loop vector(32) /* threadIdx.x */
+free_softmax:
+    429, Generating exit data delete(l[:1],l->likelihoods[:l->out_depth])
+
 $ ./cnn-cifar10 
 Parallel (pad) Code
 CNN for 50000 images
