--- a/ph4070ti/1.1.2-Kernels-independent.md
+++ b/ph4070ti/1.1.2-Kernels-independent.md
@@ -145,5 +145,108 @@ Accelerator Kernel Timing data
             elapsed time(us): total=384,420,450 max=4,395 min=1,077 avg=2,562
     50: data region reached 300000 times
 ```
+```
+                     Call graph (explanation follows)
 
 
+granularity: each sample hit covers 4 byte(s) for 0.04% of 25.43 seconds
+
+index % time    self  children    called     name
+                                                 <spontaneous>
+[1]    100.0    0.00   25.43                 main [1]
+               18.90    0.00  150000/150000      relu_forward [2]
+                5.12    0.00  150000/150000      pool_forward [3]
+                1.09    0.00   50000/50000       fc_forward [4]
+                0.27    0.00       1/1           load_data [5]
+                0.04    0.00  150000/150000      conv_forward [6]
+                0.01    0.00  550007/550007      cpu_timer_stop [7]
+                0.00    0.00  550007/550007      cpu_timer_start [8]
+                0.00    0.00   50000/50000       softmax_forward [9]
+                0.00    0.00       3/3           make_conv_layer [14]
+                0.00    0.00       3/3           make_relu_layer [16]
+                0.00    0.00       3/3           make_pool_layer [15]
+                0.00    0.00       3/3           load_conv [13]
+                0.00    0.00       3/3           free_pool [11]
+                0.00    0.00       3/3           free_conv [10]
+                0.00    0.00       3/3           free_relu [12]
+                0.00    0.00       2/2           malloc2D [17]
+                0.00    0.00       1/1           make_fc_layer [21]
+                0.00    0.00       1/1           make_softmax_layer [22]
+                0.00    0.00       1/1           load_fc [20]
+                0.00    0.00       1/1           free_softmax [19]
+                0.00    0.00       1/1           free_fc [18]
+-----------------------------------------------
+               18.90    0.00  150000/150000      main [1]
+[2]     74.3   18.90    0.00  150000         relu_forward [2]
+-----------------------------------------------
+                5.12    0.00  150000/150000      main [1]
+[3]     20.1    5.12    0.00  150000         pool_forward [3]
+-----------------------------------------------
+                1.09    0.00   50000/50000       main [1]
+[4]      4.3    1.09    0.00   50000         fc_forward [4]
+-----------------------------------------------
+                0.27    0.00       1/1           main [1]
+[5]      1.1    0.27    0.00       1         load_data [5]
+-----------------------------------------------
+                0.04    0.00  150000/150000      main [1]
+[6]      0.2    0.04    0.00  150000         conv_forward [6]
+-----------------------------------------------
+                0.01    0.00  550007/550007      main [1]
+[7]      0.0    0.01    0.00  550007         cpu_timer_stop [7]
+-----------------------------------------------
+                0.00    0.00  550007/550007      main [1]
+[8]      0.0    0.00    0.00  550007         cpu_timer_start [8]
+-----------------------------------------------
+                0.00    0.00   50000/50000       main [1]
+[9]      0.0    0.00    0.00   50000         softmax_forward [9]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[10]     0.0    0.00    0.00       3         free_conv [10]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[11]     0.0    0.00    0.00       3         free_pool [11]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[12]     0.0    0.00    0.00       3         free_relu [12]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[13]     0.0    0.00    0.00       3         load_conv [13]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[14]     0.0    0.00    0.00       3         make_conv_layer [14]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[15]     0.0    0.00    0.00       3         make_pool_layer [15]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[16]     0.0    0.00    0.00       3         make_relu_layer [16]
+-----------------------------------------------
+                0.00    0.00       2/2           main [1]
+[17]     0.0    0.00    0.00       2         malloc2D [17]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[18]     0.0    0.00    0.00       1         free_fc [18]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[19]     0.0    0.00    0.00       1         free_softmax [19]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[20]     0.0    0.00    0.00       1         load_fc [20]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[21]     0.0    0.00    0.00       1         make_fc_layer [21]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[22]     0.0    0.00    0.00       1         make_softmax_layer [22]
+-----------------------------------------------
+
+Index by function name
+
+   [6] conv_forward           [12] free_relu              [15] make_pool_layer
+   [8] cpu_timer_start        [19] free_softmax           [16] make_relu_layer
+   [7] cpu_timer_stop         [13] load_conv              [22] make_softmax_layer
+   [4] fc_forward              [5] load_data              [17] malloc2D
+  [10] free_conv              [20] load_fc                 [3] pool_forward
+  [18] free_fc                [14] make_conv_layer         [2] relu_forward
+  [11] free_pool              [21] make_fc_layer           [9] softmax_forward
+```
